<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherViewModel"
            type="com.weather.weathertask.viewmodel.WeatherViewmodel" />

        <import type="com.weather.weathertask.utils.StringUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".activity.MainActivity">

        <EditText
            android:id="@+id/city_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s10dp"
            android:layout_marginTop="@dimen/s10dp"
            android:layout_marginRight="@dimen/s10dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/alata"
            android:hint="@string/city_name"
            android:maxLines="1"
            android:padding="@dimen/s10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/go_weather_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s10dp"
            android:layout_marginRight="@dimen/s10dp"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/s10dp"
            android:onClick="goButtonClick"
            android:text="@string/get"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/place_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/s10dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_search">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/city_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/place_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/s10dp"
                        android:layout_weight="0.4"
                        android:padding="@dimen/s10dp"
                        android:text="@string/city"
                        android:textColor="@color/standard"
                        android:textSize="@dimen/s14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/city_search" />

                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/s10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/alata"
                        android:padding="@dimen/s10dp"
                        android:text="@{weatherViewModel.placeName}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/s14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/city_search" />

                </LinearLayout>

                <TextView
                    android:id="@+id/temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@string/temp"
                    android:textColor="@color/standard"
                    android:textSize="@dimen/s14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city_layout" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@{weatherViewModel.temp}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/s12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temp_text" />

                <TextView
                    android:id="@+id/pressure_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@string/pressure"
                    android:textColor="@color/standard"
                    android:textSize="@dimen/s14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@{weatherViewModel.pressure}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/s12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pressure_text" />

                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@string/humidity"
                    android:textColor="@color/standard"
                    android:textSize="@dimen/s14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pressure" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:text="@{weatherViewModel.humidity}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/s12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidity_text" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/s10dp"
                    android:paddingBottom="@dimen/s10dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidity" />

                <TextView
                    android:id="@+id/clouds_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/s10dp"
                    android:fontFamily="@font/alata"
                    android:padding="@dimen/s10dp"
                    android:text='@{weatherViewModel.clouds}'
                    android:textAllCaps="true"
                    android:textColor="@color/standard"
                    android:textSize="@dimen/s14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>